WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292761
Fix ODR violation in ListDataController
https://bugs.webkit.org/show_bug.cgi?id=292761
Summary
Fix ODR violation in ListDataController
Sihui Liu
Reported
2025-05-08 20:45:53 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-08 20:46:41 PDT
<
rdar://problem/150981612
>
Sihui Liu
Comment 2
2025-05-08 20:57:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45147
EWS
Comment 3
2025-05-09 10:02:53 PDT
Committed
294716@main
(be75d50ff3e3): <
https://commits.webkit.org/294716@main
> Reviewed commits have been landed. Closing PR #45147 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug