Fix ODR violation in ListDataController https://bugs.webkit.org/show_bug.cgi?id=292761 rdar://150981612

Reviewed by Wenson Hsieh.

The class ListDataController can have multiple definitions across different translation units, because its virtual
function only exist when OBJC is true. This is against ODR rule and can lead to undefined behavior at runtime, like
crash due to failing to find a function in vtable.

* Source/WebKit/Platform/cocoa/WebPrivacyHelpers.h:
* Source/WebKit/Platform/cocoa/WebPrivacyHelpers.mm:
(WebKit::ListDataControllerBase::observeUpdates):
(WebKit::LinkDecorationFilteringController::resourceTypeValue const):
(WebKit::StorageAccessPromptQuirkController::resourceTypeValue const):
(WebKit::StorageAccessUserAgentStringQuirkController::resourceTypeValue const):
(WebKit::ScriptTelemetryController::resourceTypeValue const):
(WebKit::LinkDecorationFilteringController::resourceType const): Deleted.
(WebKit::StorageAccessPromptQuirkController::resourceType const): Deleted.
(WebKit::StorageAccessUserAgentStringQuirkController::resourceType const): Deleted.
(WebKit::ScriptTelemetryController::resourceType const): Deleted.

Canonical link: https://commits.webkit.org/294716@main